BrowserUI and Asset: Fixing link error on build, Mac OS X specific

--- a/src/Application/BrowserUiPlugin/CMakeLists.txt
+++ b/src/Application/BrowserUiPlugin/CMakeLists.txt
@@ -14,6 +14,10 @@ SetupCompileFlags()
 
 link_modules(Framework Ui JavascriptModule)
 
+if (APPLE)
+link_ogre()
+endif ()
+
 final_target ()
 
 # Install browserui under jsmodules.
