SceneWidget/Vlc: Fix build errors, missing math includes in EC_WidgetCanvas.h.

--- a/src/Application/VlcPlugin/CMakeLists.txt
+++ b/src/Application/VlcPlugin/CMakeLists.txt
@@ -48,7 +48,7 @@ if (SHOULD_RUN)
 
     SetupCompileFlags()
 
-    link_modules (Framework Asset Ui OgreRenderingModule SceneWidgetComponents)
+    link_modules (Framework Math Asset Ui OgreRenderingModule SceneWidgetComponents)
     link_package (VLC)
 
     final_target ()
