Admino release: Move windows to default from DirectX to OpenGL. Do not merge this to rex repo.

--- a/bin/plugins.cfg
+++ b/bin/plugins.cfg
@@ -4,7 +4,7 @@
 PluginFolder=.
 
 # Render systems
-Plugin=RenderSystem_Direct3D9
+#Plugin=RenderSystem_Direct3D9
 #Plugin=RenderSystem_Direct3D10
 #Plugin=RenderSystem_Direct3D11
 Plugin=RenderSystem_GL
