--- a/bin/pluginsd.cfg
+++ b/bin/pluginsd.cfg
@@ -4,7 +4,7 @@
 PluginFolder=.
 
 # Render systems
-Plugin=RenderSystem_Direct3D9_d
+#Plugin=RenderSystem_Direct3D9_d
 #Plugin=RenderSystem_Direct3D10_d
 #Plugin=RenderSystem_Direct3D11_d
 Plugin=RenderSystem_GL_d
