--- a/src/Core/TundraProtocolModule/CMakeLists.txt
+++ b/src/Core/TundraProtocolModule/CMakeLists.txt
@@ -8,7 +8,7 @@ MocFolder ()
 # Define source files
 file (GLOB CPP_FILES *.cpp)
 file (GLOB H_FILES *.h)
-set (MOC_FILES TundraLogicModule.h SyncManager.h Server.h Client.h KristalliProtocolModule.h UserConnection.h)
+set (MOC_FILES TundraLogicModule.h SyncManager.h SyncState.h Server.h Client.h KristalliProtocolModule.h UserConnection.h)
 set (SOURCE_FILES ${CPP_FILES} ${H_FILES})
 
 set (FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${H_FILES} ${CPP_FILES} PARENT_SCOPE)
