MumbleVOIP and Vlc: Linker errors fixed

--- a/src/Application/MumbleVoipModule/CMakeLists.txt
+++ b/src/Application/MumbleVoipModule/CMakeLists.txt
@@ -103,7 +103,9 @@ link_package (MUMBLECLIENT)
 link_package (CELT)
 link_package (PROTOBUF)
 link_package (OPENSSL)
-
+if (APPLE)
+    link_ogre()
+endif ()
 SetupCompileFlagsWithPCH()
 
 final_target ()
