MumblePlugin: Prefer STL containers when sensible for perf guarantees. Implement positional audio sending/receiving and settings if the end users allows positional playback or sending his own position, you can also set the range how far you hear if played positionally. Note this is in the settings, still needs to be applied to code logic.

--- a/src/Application/MumblePlugin/CMakeLists.txt
+++ b/src/Application/MumblePlugin/CMakeLists.txt
@@ -140,6 +140,10 @@ if (APPLE)
     link_ogre()
 endif ()
 
+if (WIN32)
+    target_link_libraries (${TARGET_NAME} ws2_32.lib)
+endif()
+
 SetupCompileFlags()
 
 final_target ()
