--- a/src/Application/KinectModule/CMakeLists.txt
+++ b/src/Application/KinectModule/CMakeLists.txt
@@ -45,31 +45,28 @@ if (WIN32 AND VC100)
     # Define source files
     file (GLOB CPP_FILES *.cpp)
     file (GLOB H_FILES *.h )
-    file (GLOB XML_FILES *.xml)
-    #file (GLOB UI_FILES ui/*.ui)
-    #file (GLOB RESOURCE_FILES resource/*.qrc)
+    file (GLOB UI_FILES ui/*.ui)
 
     # Qt4 Moc files to subgroup "CMake Moc"
     # and ui_*.h generated .h files to "Generated UI" subgroup
     MocFolder ()
     UiFolder ()
 
-    set (SOURCE_FILES ${SOURCE_FILES} ${CPP_FILES} ${H_FILES})
-
     # Qt4 Wrap 
     QT4_WRAP_CPP(MOC_SRCS ${H_FILES})
     QT4_WRAP_UI(UI_SRCS ${UI_FILES})
-    QT4_ADD_RESOURCES(RESOURCE_SRCS ${RESOURCE_FILES})
+
+    set (SOURCE_FILES ${SOURCE_FILES} ${CPP_FILES} ${H_FILES} ${MOC_SRCS} ${UI_SRCS})
 
     add_definitions (-DKINECT_MODULE_EXPORTS)
 
-    use_core_modules (Framework Math OgreRenderingModule)
+    use_core_modules (Framework Math Ui OgreRenderingModule)
     use_app_modules (JavascriptModule)
     use_package (KINECT)
     
-    build_library (${TARGET_NAME} SHARED ${SOURCE_FILES} ${MOC_SRCS} ${UI_SRCS} ${RESOURCE_SRCS})
+    build_library (${TARGET_NAME} SHARED ${SOURCE_FILES})
 
-    link_modules (Framework Math OgreRenderingModule JavascriptModule)
+    link_modules (Framework Math Ui OgreRenderingModule JavascriptModule)
     link_package (KINECT)
     
     SetupCompileFlags()
